preprocessing saved to file, have to enhance to develop features to search on

--- a/backend/preprocessing.ipynb
+++ b/backend/preprocessing.ipynb
@@ -2,50 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: seaborn in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (0.13.2)\n",
-      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from seaborn) (1.26.4)\n",
-      "Requirement already satisfied: pandas>=1.2 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from seaborn) (2.0.3)\n",
-      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from seaborn) (3.9.4)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.55.8)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.7)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.5.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from pandas>=1.2->seaborn) (2025.1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from pandas>=1.2->seaborn) (2025.1)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.21.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n",
-      "Collecting beautifulsoup4\n",
-      "  Downloading beautifulsoup4-4.13.3-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4)\n",
-      "  Using cached soupsieve-2.6-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.0.0 in /Users/rohancshah/.pyenv/versions/3.9.7/lib/python3.9/site-packages (from beautifulsoup4) (4.12.2)\n",
-      "Downloading beautifulsoup4-4.13.3-py3-none-any.whl (186 kB)\n",
-      "Using cached soupsieve-2.6-py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: soupsieve, beautifulsoup4\n",
-      "Successfully installed beautifulsoup4-4.13.3 soupsieve-2.6\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install seaborn\n",
-    "! pip install beautifulsoup4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +14,13 @@
     "import scipy.stats as stats\n",
     "from scipy.stats import gamma, linregress\n",
     "from bs4 import BeautifulSoup\n",
-    "import re"
+    "import re\n",
+    "import spacy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +136,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_ingredients(ingredients):\n",
+    "  ingredients_list = ingredients.split(';')\n",
+    "  return [ingredient.strip() for ingredient in ingredients_list]\n",
+    "\n",
+    "df['parsed_ingredients'] = df['ingredients'].apply(parse_ingredients)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-sm==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: en-core-web-sm\n",
+      "Successfully installed en-core-web-sm-3.8.0\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('en_core_web_sm')\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python -m spacy download en_core_web_sm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -213,7 +207,6 @@
        "      <th>ingredients</th>\n",
        "      <th>directions</th>\n",
        "      <th>...</th>\n",
-       "      <th>vitamin_k_mcg</th>\n",
        "      <th>biotin_mcg</th>\n",
        "      <th>vitamin_b12_mcg</th>\n",
        "      <th>mono_fat_g</th>\n",
@@ -221,8 +214,9 @@
        "      <th>trans_fatty_acid_g</th>\n",
        "      <th>omega_3_fatty_acid_g</th>\n",
        "      <th>omega_6_fatty_acid_g</th>\n",
-       "      <th>is_correct</th>\n",
        "      <th>parsed_ingredients</th>\n",
+       "      <th>high_level_ingredients</th>\n",
+       "      <th>ingredient_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -246,9 +240,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
        "      <td>[1 (8 ounce) box elbow macaroni, ¼ cup butter,...</td>\n",
+       "      <td>[elbow, all - purpose flour, butter, shredded ...</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -270,9 +264,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
        "      <td>[6 cups chicken broth, divided, 3 tablespoons ...</td>\n",
+       "      <td>[chicken broth, white mushrooms, dry white win...</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -294,9 +288,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
        "      <td>[4  eggs, lightly beaten, 1 ⅓ cups milk, 2 tab...</td>\n",
+       "      <td>[all - purpose flour, white sugar, butter, egg...</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -318,9 +312,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
        "      <td>[¼ cup butter, ¼ cup soy sauce, 1 bunch green ...</td>\n",
+       "      <td>[soy sauce, bunch green onions, pork butt stea...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -342,13 +336,13 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
        "      <td>[4  skinless, boneless chicken breast halves, ...</td>\n",
+       "      <td>[bread crumbs, all - purpose flour, fresh basi...</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 49 columns</p>\n",
+       "<p>5 rows × 50 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -387,48 +381,97 @@
        "3  ¼ cup butter ; ¼ cup soy sauce ; 1 bunch green...   \n",
        "5  4  skinless, boneless chicken breast halves ; ...   \n",
        "\n",
-       "                                          directions  ... vitamin_k_mcg  \\\n",
-       "0  Bring a large pot of lightly salted water to a...  ...           NaN   \n",
-       "1  In a saucepan, warm the broth over low heat. W...  ...           NaN   \n",
-       "2  In large bowl, whisk together eggs, milk, melt...  ...           NaN   \n",
-       "3  Melt butter in a skillet, and mix in the soy s...  ...           NaN   \n",
-       "5  Preheat an oven to 450 degrees F (230 degrees ...  ...           NaN   \n",
+       "                                          directions  ... biotin_mcg  \\\n",
+       "0  Bring a large pot of lightly salted water to a...  ...        NaN   \n",
+       "1  In a saucepan, warm the broth over low heat. W...  ...        NaN   \n",
+       "2  In large bowl, whisk together eggs, milk, melt...  ...        NaN   \n",
+       "3  Melt butter in a skillet, and mix in the soy s...  ...        NaN   \n",
+       "5  Preheat an oven to 450 degrees F (230 degrees ...  ...        NaN   \n",
        "\n",
-       "  biotin_mcg vitamin_b12_mcg  mono_fat_g poly_fat_g  trans_fatty_acid_g  \\\n",
-       "0        NaN             NaN         NaN        NaN                 NaN   \n",
-       "1        NaN             NaN         NaN        NaN                 NaN   \n",
-       "2        NaN             NaN         NaN        NaN                 NaN   \n",
-       "3        NaN             NaN         NaN        NaN                 NaN   \n",
-       "5        NaN             NaN         NaN        NaN                 NaN   \n",
+       "  vitamin_b12_mcg mono_fat_g  poly_fat_g trans_fatty_acid_g  \\\n",
+       "0             NaN        NaN         NaN                NaN   \n",
+       "1             NaN        NaN         NaN                NaN   \n",
+       "2             NaN        NaN         NaN                NaN   \n",
+       "3             NaN        NaN         NaN                NaN   \n",
+       "5             NaN        NaN         NaN                NaN   \n",
        "\n",
-       "   omega_3_fatty_acid_g  omega_6_fatty_acid_g  is_correct  \\\n",
-       "0                   NaN                   NaN        True   \n",
-       "1                   NaN                   NaN        True   \n",
-       "2                   NaN                   NaN        True   \n",
-       "3                   NaN                   NaN        True   \n",
-       "5                   NaN                   NaN       False   \n",
+       "   omega_3_fatty_acid_g  omega_6_fatty_acid_g  \\\n",
+       "0                   NaN                   NaN   \n",
+       "1                   NaN                   NaN   \n",
+       "2                   NaN                   NaN   \n",
+       "3                   NaN                   NaN   \n",
+       "5                   NaN                   NaN   \n",
        "\n",
-       "                                  parsed_ingredients  \n",
-       "0  [1 (8 ounce) box elbow macaroni, ¼ cup butter,...  \n",
-       "1  [6 cups chicken broth, divided, 3 tablespoons ...  \n",
-       "2  [4  eggs, lightly beaten, 1 ⅓ cups milk, 2 tab...  \n",
-       "3  [¼ cup butter, ¼ cup soy sauce, 1 bunch green ...  \n",
-       "5  [4  skinless, boneless chicken breast halves, ...  \n",
+       "                                  parsed_ingredients  \\\n",
+       "0  [1 (8 ounce) box elbow macaroni, ¼ cup butter,...   \n",
+       "1  [6 cups chicken broth, divided, 3 tablespoons ...   \n",
+       "2  [4  eggs, lightly beaten, 1 ⅓ cups milk, 2 tab...   \n",
+       "3  [¼ cup butter, ¼ cup soy sauce, 1 bunch green ...   \n",
+       "5  [4  skinless, boneless chicken breast halves, ...   \n",
        "\n",
-       "[5 rows x 49 columns]"
+       "                              high_level_ingredients  ingredient_count  \n",
+       "0  [elbow, all - purpose flour, butter, shredded ...                 7  \n",
+       "1  [chicken broth, white mushrooms, dry white win...                11  \n",
+       "2  [all - purpose flour, white sugar, butter, egg...                 6  \n",
+       "3  [soy sauce, bunch green onions, pork butt stea...                 4  \n",
+       "5  [bread crumbs, all - purpose flour, fresh basi...                13  \n",
+       "\n",
+       "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def parse_ingredients(ingredients):\n",
-    "  ingredients_list = ingredients.split(';')\n",
-    "  return [ingredient.strip() for ingredient in ingredients_list]\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "df['parsed_ingredients'] = df['ingredients'].apply(parse_ingredients)"
+    "unwanted = [\n",
+    "    r'\\u2009', r'/', r'inch', r'â…›', r'â…”', r'Â®\"', r'®', r'\\)', r'\\(', r'%', r'V8', r'V8®', r'™', r'®', r'\\'', r'\"'\n",
+    "]\n",
+    "\n",
+    "def clean_text(text):\n",
+    "  text = text.strip()\n",
+    "  for pattern in unwanted:\n",
+    "    text = re.sub(pattern, '', text)\n",
+    "  return text\n",
+    "\n",
+    "def extract_ingredients(ingredients):\n",
+    "  ans = []\n",
+    "  stop_words = set([\n",
+    "        'cup', 'cups', 'teaspoon', 'teaspoons', 'tablespoon', 'tablespoons', 'ounce', 'ounces',\n",
+    "        'pound', 'pounds', 'quart', 'quarts', 'pinch', 'dash', 'taste', 'large', 'small', 'medium',\n",
+    "        'divided', 'minced', 'sliced', 'diced', 'chopped', 'ground', 'freshly', 'prepared', 'cut',\n",
+    "        'into', 'strips', 'halves', 'cubes', 'to', 'box', 'spoon', 'spoons', 'optional'\n",
+    "    ])\n",
+    "  \n",
+    "  for ingredient in ingredients:\n",
+    "    ingredient = clean_text(ingredient)\n",
+    "\n",
+    "    ingredient = re.sub(r'\\d*\\s*[\\d¼½¾⅓⅔⅛⅜⅝⅞]+\\s*', '', ingredient)\n",
+    "    ingredient = re.sub(r'\\b(?:' + '|'.join(stop_words) + r')\\b', '', ingredient, flags=re.IGNORECASE)\n",
+    "    ingredient = clean_text(ingredient)\n",
+    "\n",
+    "    d = nlp(ingredient)\n",
+    "    for chunk in d.noun_chunks:\n",
+    "      filtered = [token.text for token in chunk if token.text.lower() not in stop_words and not token.is_digit]\n",
+    "      if filtered:\n",
+    "        ans.append(' '.join(filtered).strip())\n",
+    "\n",
+    "  return list(set(ans))\n",
+    "\n",
+    "df['high_level_ingredients'] = df['parsed_ingredients'].apply(extract_ingredients)\n",
+    "df['ingredient_count'] = df['high_level_ingredients'].apply(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/final_df.csv', index=False)"
    ]
   }
  ],
