add diet & ingredient filtering

--- a/backend/recipe_model.ipynb
+++ b/backend/recipe_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "(32696, 50)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "Name: features, Length: 32696, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,78 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "      <th>cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Simple Macaroni and Cheese main-dish elbow all...</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Gourmet Mushroom Risotto main-dish chicken bro...</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Dessert Crepes breakfast-and-brunch all - purp...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Pork Steaks meat-and-poultry soy sauce bunch g...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Chicken Parmesan world-cuisine bread crumbs al...</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            features  cluster\n",
-       "0  Simple Macaroni and Cheese main-dish elbow all...       13\n",
-       "1  Gourmet Mushroom Risotto main-dish chicken bro...        4\n",
-       "2  Dessert Crepes breakfast-and-brunch all - purp...        3\n",
-       "3  Pork Steaks meat-and-poultry soy sauce bunch g...        6\n",
-       "4  Chicken Parmesan world-cuisine bread crumbs al...       19"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from sklearn.cluster import KMeans\n",
     "\n",
@@ -167,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +151,170 @@
     "    print(f\"Rank {i+1}: {row['name']} (Category: {row['category']})\")\n",
     "    \n",
     "print(top_k_recipes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_dietary_restrictions(ingredients, restrictions):\n",
+    "    # Common non-vegan ingredients\n",
+    "    non_vegan = ['milk', 'cheese', 'cream', 'butter', 'egg', 'honey', 'meat', 'chicken', 'beef', 'pork', 'fish']\n",
+    "    # Common non-vegetarian ingredients\n",
+    "    non_vegetarian = ['meat', 'chicken', 'beef', 'pork', 'fish']\n",
+    "    # Common gluten ingredients\n",
+    "    gluten = ['flour', 'bread', 'pasta', 'wheat', 'barley', 'rye']\n",
+    "    # Common dairy ingredients\n",
+    "    dairy = ['milk', 'cheese', 'cream', 'butter', 'yogurt']\n",
+    "    # Peanut ingredients\n",
+    "    peanut = ['peanut', 'peanut butter']\n",
+    "    \n",
+    "    ingredients_lower = [ing.lower() for ing in ingredients]\n",
+    "    \n",
+    "    for restriction in restrictions:\n",
+    "        if restriction.lower() == 'vegan':\n",
+    "            if any(ing in ingredients_lower for ing in non_vegan):\n",
+    "                return False\n",
+    "        elif restriction.lower() == 'vegetarian':\n",
+    "            if any(ing in ingredients_lower for ing in non_vegetarian):\n",
+    "                return False\n",
+    "        elif restriction.lower() == 'gluten free':\n",
+    "            if any(ing in ingredients_lower for ing in gluten):\n",
+    "                return False\n",
+    "        elif restriction.lower() == 'lactose-free':\n",
+    "            if any(ing in ingredients_lower for ing in dairy):\n",
+    "                return False\n",
+    "        elif restriction.lower() == 'peanut free':\n",
+    "            if any(ing in ingredients_lower for ing in peanut):\n",
+    "                return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_ingredients_match(recipe_ingredients, have_ingredients, avoid_ingredients):\n",
+    "    recipe_ingredients_lower = [ing.lower() for ing in recipe_ingredients]\n",
+    "    have_ingredients_lower = [ing.lower() for ing in have_ingredients]\n",
+    "    avoid_ingredients_lower = [ing.lower() for ing in avoid_ingredients]\n",
+    "    \n",
+    "    # Check if recipe contains any ingredients to avoid\n",
+    "    if any(ing in recipe_ingredients_lower for ing in avoid_ingredients_lower):\n",
+    "        return False, 0\n",
+    "    \n",
+    "    # empty recipe ingredients case\n",
+    "    if len(recipe_ingredients) == 0:\n",
+    "        return True, 0\n",
+    "    \n",
+    "    # Calculate match score based on available ingredients\n",
+    "    matching_ingredients = sum(1 for ing in have_ingredients_lower if any(ing in recipe_ing for recipe_ing in recipe_ingredients_lower))\n",
+    "    match_score = matching_ingredients / len(recipe_ingredients)\n",
+    "    \n",
+    "    return True, match_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_recipes_with_preferences(query, have_ingredients=[], avoid_ingredients=[], dietary_restrictions=[], k=5):\n",
+    "    query_tfidf = tfidf.transform([query])\n",
+    "    similarities = cosine_similarity(query_tfidf, features_tfidf).flatten()\n",
+    "    \n",
+    "    recipe_scores = []\n",
+    "    \n",
+    "    for idx, sim_score in enumerate(similarities):\n",
+    "        recipe_ingredients = eval(df.iloc[idx]['high_level_ingredients'])\n",
+    "        \n",
+    "        # check diet restrictions\n",
+    "        if dietary_restrictions and not check_dietary_restrictions(recipe_ingredients, dietary_restrictions):\n",
+    "            continue\n",
+    "        \n",
+    "        # check ingredients match\n",
+    "        valid_ingredients, ing_match_score = check_ingredients_match(recipe_ingredients, have_ingredients, avoid_ingredients)\n",
+    "        if not valid_ingredients:\n",
+    "            continue\n",
+    "        \n",
+    "        #combined score\n",
+    "        combined_score = 0.7 * sim_score + 0.3 * ing_match_score\n",
+    "        recipe_scores.append((idx, combined_score))\n",
+    "    \n",
+    "    recipe_scores.sort(key=lambda x: x[1], reverse=True)\n",
+    "    top_k_indices = [idx for idx, score in recipe_scores[:k]]\n",
+    "    top_k_scores = [score for idx, score in recipe_scores[:k]]\n",
+    "    \n",
+    "    return df.iloc[top_k_indices][['name', 'category', 'high_level_ingredients']], top_k_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: chickpea stew\n",
+      "Available ingredients: ['chickpea', 'onion', 'garlic', 'tomato']\n",
+      "Avoiding ingredients: ['mushroom', 'bell pepper']\n",
+      "Dietary restrictions: ['vegetarian', 'lactose-free']\n",
+      "\n",
+      "Top Recommendations:\n",
+      "\n",
+      "Rank 1: Italian Chickpea Bread (Score: 0.44)\n",
+      "Category: bread\n",
+      "Ingredients: ['water', 'chickpea flour', 'p salt', 'cooking spray', 'Italian seasoning', 'black pepper', 'oil']\n",
+      "\n",
+      "Rank 2: Elsy's Chickpea Burger (Score: 0.35)\n",
+      "Category: main-dish\n",
+      "Ingredients: ['roughly   cilantro leaves', 'eggs', 'chickpea flour', 'chili powder', 'garlic', 'vegetable oil', 'dried chickpeas garbanzo beans', 'salt', 'cumin', 'water   cover']\n",
+      "\n",
+      "Rank 3: Chickpea Salad (Score: 0.33)\n",
+      "Category: salad\n",
+      "Ingredients: ['red wine vinegar', 'garbanzo beans', 'onion', 'tomato', 'balsamic vinegar', 'cucumber']\n",
+      "\n",
+      "Rank 4: Red Cabbage and Chickpea Salad (Score: 0.32)\n",
+      "Category: salad\n",
+      "Ingredients: ['onion', 'tomato', 'pepper', 'tahini salad', 'red cabbage', 'salt', 'chickpeas']\n",
+      "\n",
+      "Rank 5: Mediterranean Chickpea Salad II (Score: 0.31)\n",
+      "Category: salad\n",
+      "Ingredients: ['fresh parsley', 'clove garlic', 'onion', 'roma', 'garbanzo', 'green bell pepper', 'plum tomato', 'olive oil', 'lemon', 'chickpeas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"chickpea stew\"\n",
+    "have_ingredients = ['chickpea', 'onion', 'garlic', 'tomato']\n",
+    "avoid_ingredients = ['mushroom', 'bell pepper']\n",
+    "dietary_restrictions = ['vegetarian', 'lactose-free']\n",
+    "\n",
+    "top_recipes, scores = find_recipes_with_preferences(\n",
+    "    query,\n",
+    "    have_ingredients=have_ingredients,\n",
+    "    avoid_ingredients=avoid_ingredients,\n",
+    "    dietary_restrictions=dietary_restrictions,\n",
+    "    k=5\n",
+    ")\n",
+    "\n",
+    "print(\"Query:\", query)\n",
+    "print(\"Available ingredients:\", have_ingredients)\n",
+    "print(\"Avoiding ingredients:\", avoid_ingredients)\n",
+    "print(\"Dietary restrictions:\", dietary_restrictions)\n",
+    "print(\"\\nTop Recommendations:\")\n",
+    "for i, (recipe, score) in enumerate(zip(top_recipes.iterrows(), scores)):\n",
+    "    index, row = recipe\n",
+    "    print(f\"\\nRank {i+1}: {row['name']} (Score: {score:.2f})\")\n",
+    "    print(f\"Category: {row['category']}\")\n",
+    "    print(f\"Ingredients: {row['high_level_ingredients']}\")"
    ]
   },
   {
